# appraisal-dex

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SECURITY.md  pyproject.toml  pytest.ini  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
appraisal/: __init__.py  cli.py  models.py
appraisal/engine/: __init__.py  base_module.py  loader.py  orchestrator.py
appraisal/modules/: __init__.py  auth_module.py  binary_module.py  binder_module.py  component_module.py  credential_module.py  crypto_module.py  deeplink_module.py  input_validation_module.py  manifest_module.py  misconfig_storage_module.py  network_privacy_module.py  sdk_module.py  supply_chain_module.py  taint_module.py
appraisal/report/: __init__.py  renderer.py
docs/: owasp_coverage.md  writing_modules.md
scripts/: create_test_apk.py
scripts/frida/: appraisal_agent.js
tests/: __init__.py  test_appraisal.py  test_owasp_modules.py
tests/samples/: vuln_test.apk
